--- a/task1.html
+++ b/task1.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css" />
-  <title>Pancake Stack: Task-1</title>
+  <title>Task 1: Pancake Stack</title>
 </head>
 <body>
   <div class="task-1 container">
